<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key='NSA'
        android:title="@string/Setting_data_collectie"
        android:summary="@string/Setting_data__collectie_tekst"
        android:defaultValue="true"/>
    <CheckBoxPreference
        android:key='DST'
        android:title="@string/Setting_zomeruur"
        android:summary="@string/Setting_zomeruur_tekst"
        android:defaultValue="false"/>
    <EditTextPreference
        android:key="username"
        android:title="username"
        android:defaultValue=""/>
    <ListPreference
        android:key="Lijndikte"
        android:title="@string/Setting_lijndikte"
        android:summary="@string/Settings_lijndikte_tekst"
        android:entries="@array/lijnentries"
        android:entryValues="@array/lijnvalues"
        />
    <EditTextPreference
        android:key="developerpass"
        android:title="@string/Setting_developper_pass"
        android:summary="@string/Setting_enter_password"
        android:inputType="textPassword"
        />

    <SwitchPreference
        android:key="Developing_mode"
        android:title="@string/Setting_dev_mode"
        android:summary="@string/Setting_dev_mode_tekst"
        android:defaultValue="false"
        android:enabled="false"
        />
    <SwitchPreference
        android:key="Metingen"
        android:title="@string/Preference_metingen_weergeven"
        android:defaultValue="false"
        android:enabled="false"/>
    <ListPreference
        android:key="Server"
        android:title="@string/Setting_server"
        android:summary="@string/Setting_server_tekst"
        android:entries="@array/serverentries"
        android:entryValues="@array/servervalues"
        android:enabled="false"
        />
    <SwitchPreference
        android:key="Pointers"
        android:title="@string/Setting_pointers"
        android:summary="@string/Setting_pointers_tekst"
        android:defaultValue="false"
        android:enabled="false"/>
    <SwitchPreference
        android:key="Accuracy"
        android:title="@string/Preference_negeer_accuracy"
        android:defaultValue="false"
        android:enabled="false"/>
    <Preference
        android:key = "longitude"
        android:defaultValue="0"/>
    <Preference
        android:key = "latitude"
        android:defaultValue="0"/>
</PreferenceScreen>