<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height='20dp'
            android:text="@string/Measurements"
            android:id="@+id/buttonmeet"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.15"
            android:onClick="naarmeten"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height='20dp'
            android:text="@string/maps"
            android:id="@+id/buttonmap"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.15"
            android:onClick="naarmap"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height='20dp'
            android:text="@string/Settings"
            android:id="@+id/buttonsettings"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.15"
            android:onClick="naarsettings"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height='20dp'
            android:text="@string/Leaderboard"
            android:id="@+id/buttonleaderboard"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.15"
            android:onClick="naarleaderboard"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height='20dp'
            android:text="@string/username_menu_button"
            android:id="@+id/buttonUsername"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.15"
            android:onClick="naarusername"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height='20dp'
            android:text="@string/button_save_bike_location"
            android:id="@+id/locationsaver"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.15"
            android:onClick="naarlocation"/>

    </LinearLayout>

</RelativeLayout>
